frontend/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: innovatech-frontend
  labels:
    app: innovatech-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: innovatech-frontend
  template:
    metadata:
      labels:
        app: innovatech-frontend
      annotations:
        rollme: "DUMMY"
    spec:
      containers:
        - name: frontend
          image: <AWS_ACCOUNT_ID>.dkr.ecr.<AWS_REGION>.amazonaws.com/innovatech-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
