frontend/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: innovatech-frontend
spec:
  selector:
    app: innovatech-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
