frontend/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "<ACM_CERT_ARN>"
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/group.name: innovatech

    # Cognito auth
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    alb.ingress.kubernetes.io/auth-scope: openid
    alb.ingress.kubernetes.io/auth-session-cookie: awsalb-auth
    alb.ingress.kubernetes.io/auth-session-timeout: "604800"

    alb.ingress.kubernetes.io/auth-idp-cognito: >-
      {"UserPoolArn":"<COGNITO_POOL_ARN>",
       "UserPoolClientId":"<COGNITO_CLIENT_ID>",
       "UserPoolClientSecret":"<COGNITO_CLIENT_SECRET>",
       "UserPoolDomain":"<COGNITO_POOL_DOMAIN>"}

spec:
  rules:
    - host: portal.daanwelten.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
